fix: fixed posts list render, fixed open create post modal on mobile versions, fixed some small bugs

--- a/src/ui/components/post/post.module.scss
+++ b/src/ui/components/post/post.module.scss
@@ -28,6 +28,7 @@
 }
 
 .img {
+  object-fit: cover;
   @media (min-width: 375px) {
     border-radius: 24px;
   }
