--- a/src/ui/views/home/home.module.scss
+++ b/src/ui/views/home/home.module.scss
@@ -1,5 +1,7 @@
+@import '@/ui/styles/variables.scss';
+@import '@/ui/styles/_mixins.scss';
+
 .container {
-  // display: flex;
   @media (min-width: 375px) {
     padding: 24px 16px 24px;
   }
@@ -36,8 +38,6 @@
   }
 
   @media (min-width: 1024px) {
-    display: flex;
-    flex-direction: column;
     gap: 54px;
   }
 }
@@ -48,7 +48,22 @@
 
 .loader {
   height: 200px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @include flex-center;
+}
+
+.icon-wrapper {
+  @media (min-width: 375px) {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    @include flex-center;
+    border-radius: 12px;
+    padding: 0;
+  }
+
+  @media (min-width: 1200px) {
+    display: none;
+  }
 }
